--- a/public/css/portofolio.css
+++ b/public/css/portofolio.css
@@ -658,18 +658,18 @@ text-align:justify ;
   opacity: 0;
   line-height: 1;
   text-align: center;
-  width: 36px;
-  height: 36px;
-  background: #fff;
+  width: 45px;
+  height: 45px;
+  background: rgb(255, 255, 255);
   border-radius: 50%;
   transition: 0.2s linear;
 }
 
 #noticias .noticias-item figure .link-preview i,
 #noticias .noticias-item figure .link-details i {
-  font-size: 22px;
-  color: #333;
-  line-height: 0;
+  font-size: 29px;
+  color: rgb(0, 71, 73);
+  line-height: 2;
 }
 
 #noticias .noticias-item figure .link-preview:hover,
@@ -683,23 +683,23 @@ text-align:justify ;
 }
 
 #noticias .noticias-item figure .link-preview {
-  left: calc(50% - 38px);
+  left: calc(50% - 48px);
   top: calc(50% - 18px);
 }
 
 #noticias .noticias-item figure .link-details {
-  right: calc(50% - 38px);
+  right: calc(50% - 48px);
   top: calc(50% - 18px);
 }
 
 #noticias .noticias-item figure:hover .link-preview {
   opacity: 1;
-  left: calc(50% - 44px);
+  left: calc(50% - 64px);
 }
 
 #noticias .noticias-item figure:hover .link-details {
   opacity: 1;
-  right: calc(50% - 44px);
+  right: calc(50% - 64px);
 }
 
 #noticias .noticias-item .noticias-info {
@@ -734,3 +734,7 @@ text-align:justify ;
   font-size: 14px;
   text-transform: uppercase;
 }
+
+
+
+
